# rust-mongodb

./: .env  .env.example  Cargo.toml  Dockerfile  README.md
src/: config.rs  main.rs
src/controllers/: not_found.rs  status.rs  user.rs
src/db/: user.rs
src/lib/: auth.rs  mongo.rs
src/meta/: user.rs
src/models/: user.rs
