[package]
name = "hello-rocket"
version = "0.1.0"
authors = ["greg"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
mongodb = "1.0.0"
bson = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.57"
tokio = "0.2.22"
rocket_contrib = "0.4.5"
dotenv = "*"