[package]
name = "rust-mongodb"
version = "0.0.1"
authors = ["Grégoire Harba <gregoire.harba@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.5"
mongodb = { version = "1.0", features = ["sync"], default-features = false }
bson = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.57"
rocket_contrib = "0.4.5"
dotenv = "0.15.0"
jsonwebtoken = "7.2.0"
rust-crypto = "0.2.36"
linked-hash-map = "0.5.3"
chrono = "0.4.13"
rocket_cors = "0.5.2"